- Fixed dark mode logo - Fixed dark mode tab bar for ios (🤞)

--- a/ResortPlatform/src/app/home/home.page.scss
+++ b/ResortPlatform/src/app/home/home.page.scss
@@ -1,3 +1,7 @@
+#site-logo {
+  content: var(--ion-logo-url);
+}
+
 #container {
   text-align: center;
 
