--- a/ResortPlatform/src/app/user/user.page.scss
+++ b/ResortPlatform/src/app/user/user.page.scss
@@ -1,3 +1,7 @@
+#site-logo {
+  content: var(--ion-logo-url);
+}
+
 ion-toolbar {
   ion-icon {
     font-size: 13rem;
